fix line spacing and font sizing in modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,10 +186,11 @@ h2 {
     border: 2px solid rgb(223, 209, 193);
     border-radius: 10px;
     width: 75%;
+    line-height: 2rem;
 }
   
   /* The Close Button */
   .close {
     float: right;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
   }
